# ca_ballot_propositions

./: .gitignore  README.md  main.py  pyproject.toml
data/extracted/v0.1/: extracted_prop_results.json
data/v0.1/: prop_results_2012.json  prop_results_2014.json  prop_results_2016.json  prop_results_2018.json  prop_results_2020.json  prop_results_2022.json  prop_results_2024.json
data/v0.2/: compiled_prop_results.json
src/: app_args.py  compiled_few_shot.py  compiled_propositions.json  extract.py
